# pictoria

./: Taskfile.yaml  package-lock.json  package.json
cognito-at-edge/: .gitignore  README.md  deploy.sh  index.template.js  package-lock.json  package.json
container/get-machine-list/: Dockerfile  README.rst  entrypoint.sh  machine_info.json  pyproject.toml
container/get-machine-list/get_machine_list/: get-machine-info.py
container/get-machine-list/tests/: test_get_machine_list.py
src/: router.js
src/organisms/: LogTable.js  RegisterLog.js  register-log.js
src/pages/: logging-page.js
web/: Taskfile.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
web/public/: index.html
web/src/: App.tsx  index.js  routes.ts
web/src/api/: machines.js
web/src/components/: Footer.tsx  Header.tsx  Layout.tsx
web/src/molecules/: NumberField.js
web/src/organisms/: LogTable.js  RegisterLog.js
web/src/pages/: Home.tsx  LoggingPage.js  NotFound.tsx  Profile.tsx
web/src/routes/: AppRoutes.tsx
web/src/templates/: BaseTemplate.tsx
web_old/: package.json
web_old/public/: manifest.json
web_old/src/: router.js
web_old/src/api/: endpoint.js  machines.js
web_old/src/const/: const.js
web_old/src/molecules/: SelectMachineField.js
web_old/src/organisms/: Header.js  RegisterLog.js
web_old/src/pages/: LoggingPage.js
