[tool.poetry]
name = "get-machine-list"
version = "0.1.0"
description = ""
authors = ["CentralEden <central.eden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
boto3 = "^1.26.56"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
